// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-media-multiple should continue processing on individual file errors 1`] = `
{
  "content": [
    {
      "text": "{
  "summary": "Processed 2 files: 1 succeeded, 1 failed",
  "results": [
    {
      "success": true,
      "name": "_Test Batch Image 1"
    },
    {
      "success": false,
      "name": "_Test Batch Image 2",
      "error": "File path \\"/non/existent/file.jpg\\" is not in an allowed directory. Allowed directories: /Users/philw/Projects/umbraco-mcp-template"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`create-media-multiple should create multiple files with mixed media types 1`] = `
{
  "content": [
    {
      "text": "{
  "summary": "Processed 2 files: 2 succeeded, 0 failed",
  "results": [
    {
      "success": true,
      "name": "_Test Mixed Image"
    },
    {
      "success": true,
      "name": "_Test Mixed File"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`create-media-multiple should create multiple images in batch 1`] = `
{
  "content": [
    {
      "text": "{
  "summary": "Processed 2 files: 2 succeeded, 0 failed",
  "results": [
    {
      "success": true,
      "name": "_Test Batch Image 1"
    },
    {
      "success": true,
      "name": "_Test Batch Image 2"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`create-media-multiple should create multiple media from URLs 1`] = `
{
  "content": [
    {
      "text": "{
  "summary": "Processed 2 files: 2 succeeded, 0 failed",
  "results": [
    {
      "success": true,
      "name": "_Test URL Batch Image 1"
    },
    {
      "success": true,
      "name": "_Test URL Batch Image 2"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`create-media-multiple should handle batch size limit validation 1`] = `
{
  "content": [
    {
      "text": "Batch upload limited to 20 files per call. You provided 21 files. Please split into multiple batches.",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`create-media-multiple should use default File media type when not specified 1`] = `
{
  "content": [
    {
      "text": "{
  "summary": "Processed 1 files: 1 succeeded, 0 failed",
  "results": [
    {
      "success": true,
      "name": "_Test Batch File 1"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;
